--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -7,21 +7,22 @@
                 <div class="login-snip"> <input id="tab-1" type="radio" name="tab" class="sign-in" checked><label for="tab-1" class="tab">Login</label> <input id="tab-2" type="radio" name="tab" class="sign-up"><label for="tab-2" class="tab">Sign Up</label>
                     <div class="login-space">
                         <form #loginForm="ngForm" (ngSubmit)="onLginSubmit(loginForm)">
-                            <app-loadingspinner></app-loadingspinner>
+                            <!-- <app-loadingspinner></app-loadingspinner> -->
                         <div class="login">
                             <div class="group"> 
                                 <label for="user" class="label">Username</label> 
-                                <input id="user" type="text" class="input" placeholder="Enter your username"> </div>
+                                <input id="user" type="text" class="input" placeholder="Enter your username"
+                                 ngModel name="userEmail" #userEmail required email> </div>
                             <div class="group">
                                  <label for="pass" class="label">Password</label>
-                                  <input id="pass" type="password" class="input" data-type="password" placeholder="Enter your password"> </div>
+                                  <input id="pass" type="password" class="input" data-type="password" placeholder="Enter your password"
+                                  ngModel name="pass" #pass required> </div>
+                            
                             <div class="group"> 
-                                <input id="check" type="checkbox" class="check" checked> 
-                                <label for="check"><span class="icon"></span> Keep me Signed in</label> </div>
-                            <div class="group"> 
-                                <input type="submit" class="button" value="Sign In"> </div>
+                                <input type="submit" class="button" value="Sign In"
+                                [disabled]="!loginForm.valid"> </div>
                             <div class="hr"></div>
-                            <div class="foot"> <a href="#">Forgot Password?</a> </div>
+                          
                         </div>
                     </form>
                     <form #regForm="ngForm" (ngSubmit)="onRegSubmit(regForm)">
