--- a/src/app/user/login/login.component.css
+++ b/src/app/user/login/login.component.css
@@ -199,3 +199,10 @@ a {
 ::placeholder {
     color: #b3b3b3
 }
+
+.loaderalign {
+    position: absolute;
+    margin-top: 49%;
+    margin-left: 39%;
+
+}
